kubernetes/apps/app-cluster/default/echo/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - echo.krapulax.dev
  rules:
    - backendRefs:
        - name: echo
          port: 8080
sops:
  age:
    - recipient: age1saea3t7l67lavg0ardepzys6egp50g82uvks98pk53xdlj57uf8sa2arcs
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGRVFnVXdqc29OTVhKMnVU
[...]
        B1kHU5SbEb/xa1gHvsa2VbEL4FkYuQgEIBAjWn4X1AYAcxz96tJlrg==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-19T09:48:31Z"
  mac: ENC[AES256_GCM,data:xihbV4BhaGwfaz9RdrA8NiO2YpWfSW2DCSI+lIWN4QKHanh1x65dhcGvGz42wW77Jby7Z3jsPEwtnEvuU39YcoUwf08EWsOy/alHP527vQHHx3hdR8DNTM3RtfnZrtCx1l5PMoEWuQFj6TU0R3YPbsDl7Ts6AV5qz0N27v84cRQ=,iv:+mS1JCSiNp7sHxV3fC1RAbxT7AUqzmsBAJzqnIvWSFU=,tag:Dv6akecuDenLBtVMvTFt1w==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
